force-app/main/default/objects/Appraisal_Order_Comment__c/Appraisal_Order_Comment__c.object-meta.xml
<CustomObject>
    <description>These are comments made by Appraisal Firms regarding Appraisal Orders</description>
    <label>Appraisal Order Comment</label>
    <nameField>
        <displayFormat>AOC-{000000}</displayFormat>
        <label>Appraisal Order Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appraisal Order Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>