force-app/main/default/objects/Appraisal_Order_Comment__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <label>Appraisal</label>
    <referenceTo>Appraisal__c</referenceTo>
    <relationshipLabel>Appraisal Order Comments</relationshipLabel>
    <relationshipName>Appraisal_Order_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>