force-app/main/default/objects/Appraisal_Order_Comment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment from the Appraisal Firm</description>
    <inlineHelpText>Comment from the Appraisal Firm</inlineHelpText>
    <label>Comment</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>