force-app/main/default/objects/Appraisal_Order_Comment__c/fields/Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Date__c</fullName>
    <description>Date that the Comment was made</description>
    <inlineHelpText>Date that the Comment was made</inlineHelpText>
    <label>Comment Date</label>
    <type>DateTime</type>
</CustomField>